Update InitializationManager.java